--- a/collection/templates/index.html
+++ b/collection/templates/index.html
@@ -1,11 +1,21 @@
 {% extends 'layouts/base.html' %}
+{% load humanize %}
 {% block title %}Home - {{ block.super }}{% endblock %} 
 
 {% block div %}<div class="bg-image"></div>{% endblock %}
 
 {% block content %}
 	<div class="container">
-		<h1>Hello World!</h1>
-			<p>I am a basic website.</p>
+		<h1>Welcome {{user_name|title}}!</h1>
+			<p> It's been {{ last_post|timeuntil:today }} since your last review.</p>
+			<p>You have reviewed {{ user_review_num|apnumber }} coffee shop{{ user_review_num|pluralize }}.	
+			</p>
+		<h2>Shops</h2>
+			{% for shop in shops %} 
+			<h3>{{ shop.name }}</h3> 
+			<p>{{ shop.description }}</p> 
+			{% endfor %}
 	</div>
+	
 {% endblock %}
+
