--- a/collection/templates/layouts/base.html
+++ b/collection/templates/layouts/base.html
@@ -23,10 +23,17 @@
 			<a href="{% url 'home' %}">Home | </a>
 			<a href="{% url 'about' %}">About | </a>
 			<a href="{% url 'contact' %}">Contact</a>
+			{% if user.is_authenticated %}
+				<a href="{% url 'auth_logout' %}">| Logout</a> 
+			{% else %}
+				<a href="{% url 'auth_login' %}">| Login</a>
+				<a href="{% url 'registration_register'%}">| Register</a>
+			{% endif %}
 		</nav>	
 	</header>
-
+	<div class="container">
 	{% block content %}{% endblock %}
+	</div>
 	{% block footer %}{% endblock %}
 	
 </body>
