add password files

--- a/collection/templates/registration/logout.html
+++ b/collection/templates/registration/logout.html
@@ -4,5 +4,5 @@
 
 {% block content %}
 	<h1>Logged Out</h1>
-	<p>You have been logged out {{user|title}}!</p>
+	<p>You have been logged out!</p>
 {% endblock %}
