--- a/collection/templates/registration/login.html
+++ b/collection/templates/registration/login.html
@@ -5,8 +5,11 @@
 <div class= "container">
 	<h1>Login</h1>
 	<form role="form" action="" method="post">
-	{% csrf_token %}
-	{{ form.as_p }}
-	<input type="submit" value="Submit" />
+		{% csrf_token %}
+		{{ form.as_p }}
+		<input type="submit" value="Submit" />
 	</form>
+	<p>
+		<a href="{% url 'password_reset' %}">Forgot your password? </a>
+	</p>
 {% endblock %}
